[C] Minor performance adjustments
* Revalidate instance on deploy after a slight delay
* Don't log slow fields in request logs by default
* Use pitchfork queues
* Add revalidation rake tasks for console usage

--- a/docker/local-prd.env
+++ b/docker/local-prd.env
@@ -1,5 +1,6 @@
 RAILS_ENV=production
-WEB_CONCURRENCY=2
+WEB_CONCURRENCY=4
+PITCHFORK_QUEUES=4
 FRONTEND_REVALIDATE_SECRET=revalidatenow
 RAILS_MAX_THREADS=8
 DATABASE_URL=postgresql://postgres:@db/wdp_api_development
