--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -618,6 +618,7 @@ RSpec/ContextWording:
 
 RSpec/DescribeClass:
   Exclude:
+    - spec/integrations/**/*.rb
     - spec/requests/**/*.rb
 
 RSpec/DuplicatedMetadata:
