[E] Improve template rendering performance
* Add new System::Check scheduled job
* Inline ordering entry counts
* Properly cache named entity ancestors on sync instead
  of using a view
* Improve lookups for ordering details and ancestors in templates
  to cache within the drops for subsequent usages
* Sync hierarchies as part of sync unless capturing for later refresh
* Speed up several model tests with let_it_be

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,10 +166,7 @@ services:
         condition: service_healthy
     env_file:
       - docker/compose.env
-    environment:
-      - RACK_ENV=test
-      - RAILS_ENV=test
-      - REDIS_URL=redis://test-redis:6379
+      - docker/test.env
     logging:
       driver: json-file
       options:
